--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fastify/cors": "^10.0.1",
     "@google/generative-ai": "^0.19.0",
+    "backend": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
